--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">MacBook</li>
+		<li data-ns-test="shoppingList">Iphone</li>
+		<li data-ns-test="shoppingList">Car</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test="holidayList">Goa</li>
+		<li data-ns-test="holidayList">Andaman</li>
+		<li data-ns-test="holidayList">Kerala</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
